<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLoginBackground"
    android:orientation="vertical"
    tools:context="com.watermelon.luomi.panda.activity.LoginActivity">

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="40dp"
        android:src="@drawable/head" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:background="@android:color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_background_top"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableLeft="@mipmap/phone_login"
                android:hint="@string/enter_phone"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" />

            <Button
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:text="@string/replace_txt"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#aaaaaa"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/white"
                android:drawableLeft="@mipmap/password_login"
                android:hint="@string/enter_password"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" />

            <Button
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_blue_light"
                android:text="@string/replace_txt"
                android:visibility="invisible" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/colorLoginLine"></View>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_background"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:autoLink="all"
            android:linksClickable="true"
            android:onClick="register"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"></View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/found_password"
            android:autoLink="all"
            android:linksClickable="true"
            android:onClick="foundPassword"/>
    </LinearLayout>
</LinearLayout>
