<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="newsDetail"
            type="com.watermelon.luomi.panda.net.NewsDetailResponse"></variable>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPage"
        android:orientation="vertical"
        tools:context="com.watermelon.luomi.panda.activity.PublishActivity">

        <include layout="@layout/toolbar"></include>

        <include layout="@layout/line"></include>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen8"
            android:layout_marginTop="@dimen/dimen8"
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:padding="@dimen/dimen16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_title" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@={newsDetail.title}"/>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@android:color/white"
            android:gravity="top"
            android:text="@={newsDetail.body}"
            android:hint="@string/please_edit_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:padding="@dimen/dimen2"
                android:src="@drawable/head" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dimen16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/article_setting" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen20"
                android:text="@string/recommend"
                android:checked="@={newsDetail.can_comment}"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dimen20"
                android:text="@string/comment_do"
                android:checked="@={newsDetail.recommend}"/>
        </LinearLayout>
    </LinearLayout>
</layout>

